# paint

./: CMakeLists.txt  canvas.cpp  canvas.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  paintarea.cpp  paintarea.h  painter_Qt.pro
